Board cells evolve on click.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="viewport" content="width= , initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game of Life</title>
         <!--Our Style Sheet-->
@@ -11,6 +11,9 @@
     <body>
         <div id="world">
 
+        </div>
+        <div>
+            <input type='button' value='Evolve' onclick='evolve()'.>
         </div>
         <!--JavaScript-->
         <script 
